--- a/website/css/CMScss.css
+++ b/website/css/CMScss.css
@@ -37,7 +37,7 @@ padding:20px 50px;
 /*login text (j)*/
 .h1{
 	font-family: sans-serif;
-} 
+}
 
 /* naam boven de registratie formulier(s)*/
 .Registernaam{
@@ -54,7 +54,7 @@ width: 270px;
 padding: 10px;
 margin: 15px 0;
 border-radius: 8px;
-background-color: transparent;
+background-color: rgba(255, 250, 210, 0.1);
 border: 1px solid black;
 max-width: 80%
 }
@@ -113,7 +113,7 @@ input[type=text] {
   margin: 8px 0;
   border-radius: 8px;
   background-color: transparent;
-  border: 1.5px solid black;
+  border: 1px solid black;
 
 }
 
@@ -125,7 +125,7 @@ input[type=password] {
   margin: 16px 0;
   border-radius: 8px;
   background-color: transparent;
-  border: 1.5px solid black;
+  border: 1px solid black;
 
 }
 
@@ -140,7 +140,7 @@ input[type=email] {
   border: 1.5px solid black;
 
 }
- 
+
 .mop{
 	margin-top: 30px;
 }
