--- a/website/css/CMScss.css
+++ b/website/css/CMScss.css
@@ -106,7 +106,7 @@ text-decoration: none;
 }
 
 /* input van login en wachtwoord vergeten(j) */
-.jknoppen{
+.jformulier{
   width: 280px;
   height: 15px;
   padding: 10px ;
@@ -118,7 +118,7 @@ text-decoration: none;
 }
 
 /* input van login en wachtwoord vergeten(j) */
-.jknoppen{
+.jformulier{
   width: 280px;
   height: 15px;
   padding: 10px;
@@ -130,7 +130,7 @@ text-decoration: none;
 }
 
 /* input van login en wachtwoord vergeten(j) */
-.jknoppen{
+.jformulier{
   width: 280px;
   height: 15px;
   padding: 10px;
