--- a/website/css/CMScss.css
+++ b/website/css/CMScss.css
@@ -37,6 +37,7 @@ padding:20px 50px;
 /*login text (j)*/
 .h1{
 	font-family: sans-serif;
+	color: lightgray;
 }
 
 /* naam boven de registratie formulier(s)*/
