--- a/website/css/blog.css
+++ b/website/css/blog.css
@@ -2,9 +2,17 @@ html
 {
 	background-color: lightgrey; 
 }
+header
+{
+	text-align: center;
+	color: black;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 40px;
+}
+
 .container
 {
-	margin: 0px 100px 0px 100px;
+	margin: 0px 200px 0px 200px;
 
 }
 
@@ -19,6 +27,28 @@ html
 .cato
 {
 	text-align: right;
+	color: black;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15px;
+	
 }
+.names
+{
+	list-style: none;
+	font-size: 15px;
+	color: inherit;
+}
+.button
+{
+	font-family: Arial, Helvetica, sans-serif;	
+	padding: 3px;
+	margin: 0px 10px 0px 10px;
+	width: 15%;
+	border-radius: 8px;
+	border-style: solid;
+	border-color: black;
+	display:inline-block;
+}
+
 
 
