--- a/website/css/CMScss.css
+++ b/website/css/CMScss.css
@@ -37,7 +37,7 @@ padding:20px 50px;
 /*login text (j)*/
 .h1{
 	font-family: sans-serif;
-	color: lightgray;
+	color:  #ADADAD;
 }
 
 /* naam boven de registratie formulier(s)*/
@@ -108,8 +108,6 @@ text-decoration: none;
 
 }
 
-<<<<<<< HEAD
-=======
 /* input van login en wachtwoord vergeten(j) */
 .jformulier{
   width: 280px;
@@ -145,7 +143,6 @@ text-decoration: none;
   border: 1.5px solid black;
 
 }
->>>>>>> 615d70f6c85126e8fe8c04aea5541fe3534e5e07
 
 .mop{
 	margin-top: 20px;
