--- a/website/css/CMScss.css
+++ b/website/css/CMScss.css
@@ -9,7 +9,7 @@ background-size: cover;
 height: 100%
 }
 
-/* register code grijze vlakte ()*/
+/* register code grijze vlakte (s)*/
 .registerplek{
 position: absolute;
 top: 45%;
@@ -107,7 +107,7 @@ text-decoration: none;
 }
 
 /* input van login en wachtwoord vergeten(j) */
-.jformulier{
+.formulierusername{
   width: 280px;
   height: 15px;
   padding: 10px ;
@@ -119,7 +119,7 @@ text-decoration: none;
 }
 
 /* input van login en wachtwoord vergeten(j) */
-.jformulier{
+.formulieremail{
   width: 280px;
   height: 15px;
   padding: 10px;
@@ -131,14 +131,14 @@ text-decoration: none;
 }
 
 /* input van login en wachtwoord vergeten(j) */
-.jformulier{
+.formulierwachtwoord{
   width: 280px;
   height: 15px;
   padding: 10px;
   margin: 16px 0;
   border-radius: 8px;
   background-color: transparent;
-  border: 1.5px solid black;
+  border: 1px solid black;
 
 }
 
