--- a/website/css/blog.css
+++ b/website/css/blog.css
@@ -1,6 +1,11 @@
 html
 {
-	background-color: lightgrey; 
+	background: linear-gradient(to bottom right, #cc66ff 32%, #00cc99 100%);
+	background-size: 100%;
+	background-repeat: no-repeat;
+	font-family: Arial, Helvetica, sans-serif;
+	background-size: cover;
+	height: 100%
 }
 header
 {
@@ -22,7 +27,7 @@ header
 {
 	background-color: white;
 	text-align: center;
-	padding: 30px 30px 30px 0px;
+
 }
 .cato
 {
@@ -41,13 +46,12 @@ header
 .button
 {
 	font-family: Arial, Helvetica, sans-serif;	
-	padding: 3px;
-	margin: 0px 10px 0px 10px;
+	padding: 10px 50px;
 	width: 15%;
 	border-radius: 8px;
 	border-style: solid;
 	border-color: black;
-	display:inline-block;
+	margin-top: 10px;
 }
 
 
