--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,6 +1,8 @@
 html {
-  background-image: url("../images/welkom.jpg");
   background-size: cover;
+  background-image: linear-gradient(#494947, #d8d8d6);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -52,6 +54,7 @@ a {
   background-position: center -150px center;
   font-family: 'Century Gothic',sans-serif;
   padding: 15px;
+  border-radius:22px;
   text-align: center;
   color: white;
   text-shadow: 2px 2px black;
@@ -92,7 +95,8 @@ ul {
   margin: 10;
   padding: 0;
   width: 14%;
-  background-color: #8A8984;
+  border-radius:22px;
+  background-color: #D8D8D8;
   height: 65%;
   position: fixed;
   overflow: auto;
@@ -124,6 +128,7 @@ li a:hover {
   text-align: center;
   background: #FFF;
   color: black;
+  border-radius:22px;
   font-size: 15px;;
   border: 1px solid #515453;
   width: 550px;
