--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,6 +1,6 @@
 html {
   background-size: cover;
-  background-image: linear-gradient(#494947, #E6E6E6);
+  background-image: linear-gradient(#6E6E6E, white);
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
