--- a/website/css/index.css
+++ b/website/css/index.css
@@ -56,6 +56,8 @@ a {
   background-size: cover;
   padding: 16px;
   border-radius:22px;
+  position: fixed;
+  width: 100%;
 
 }
 
@@ -81,7 +83,7 @@ h1.site-title{
   clear: both;
 }
 .content{
-  max-width: 500px;
+  max-width: 550px;
   margin: auto;
   text-align: center;
 }
@@ -94,32 +96,6 @@ h1.page-title{
 .btn-group{
   float: left;
   width: 20%
-}
-
-ul {
-  list-style-type: none;
-  margin: 10;
-  padding: 0;
-  width: 14%;
-  border-radius:22px;
-  background-color: #D8D8D8;
-  height: 65%;
-  position: fixed;
-  overflow: auto;
-  margin-top: 40px
-}
-
-li a {
-  display: block;
-  color: #000;
-  padding: 9px 16px;
-  text-decoration: none;
-  text-align: center;
-}
-
-li a:hover {
-  background-color: #BDBDBD;
-  color: black;
 }
 
 .active {
@@ -137,9 +113,9 @@ li a:hover {
   border-radius:22px;
   font-size: 12px;;
   border: 1px solid #515453;
-  width: 550px;
-  height: 500px;
-  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  margin-top: 35%;
 
 .btn-group button:not(:last-child) {
   border-bottom: none;
@@ -156,12 +132,15 @@ p{
     font-size: 120%;
     line-height: 130%;
     text-align: left;
-    margin: 3%;
+    margin-top: 4%;
     font-family: sans-serif;
 
 }
 .UserProfileName{
   position: absolute;
+  position: fixed;
+  top: 0;
+  width: 100%;
     top: 35px;
     right: 200px;
     font-size: 95%;
@@ -174,4 +153,39 @@ p{
   background-color: #D8D8D8;
   text-align: center;
   background: #484B4F;
+}
+
+
+ul {
+  list-style-type: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
+  background-image: linear-gradient(#969696, #A1A1A1);
+  top: 167px;
+  left: 0.5%;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #BDBDBD;
+
+  }
+
+.log-out {
+  background-color: #848481;
 }
