--- a/website/css/index.css
+++ b/website/css/index.css
@@ -54,11 +54,15 @@ a {
 .header {
   background-image: url("../images/welkom3.jpg");
   background-size: cover;
-  padding: 16px;
-  border-radius:22px;
+  padding: 12px;
+  border-radius:0px;
   position: fixed;
   width: 100%;
 
+}
+
+body {
+  margin: 0;
 }
 
 h1.site-title{
@@ -112,7 +116,7 @@ h1.page-title{
   color: black;
   border-radius:22px;
   font-size: 12px;;
-  border: 1px solid #515453;
+  box-shadow: 4px 7px 35px 8px #888888;
   width: 100%;
   height: 100%;
   margin-top: 35%;
@@ -164,9 +168,8 @@ ul {
   overflow: auto;
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(#969696, #A1A1A1);
-  top: 167px;
-  left: 0.5%;
+  top: 100px;
+  left: 37%;
 }
 
 li {
