--- a/website/css/index.css
+++ b/website/css/index.css
@@ -33,16 +33,18 @@ a {
 }
 /*Layout button */
 .logout {
- background: #484B4F;
+ background: ;
   width: 100px;
   cursor:pointer;
-  border-radius:50px;
-  padding:10px 20px 10px 0;
-  color: White;
+  border: 1.5px solid black;
+  border-radius:40px;
+  font-weight: bold;
+  padding:2px 1px 2px;
+  color: black;
   font-family: 'Century Gothic',sans-serif;
   font-size:14px;
   text-align:left;
-  text-indent:35px;
+  text-indent:26px;
   display:block;
   margin:0 auto;
   position:fixed;
@@ -52,7 +54,7 @@ a {
 }
 
 .header {
-  background-image: url("../images/welkom3.jpg");
+  background-image: linear-gradient(#42E51D, #57FF68);
   background-size: cover;
   padding: 12px;
   border-radius:0px;
@@ -154,9 +156,9 @@ p{
   padding: 0;
   width: 9%;
   border-radius:22px;
-  background-color: #D8D8D8;
+  background-color: #C7C7C7;
   text-align: center;
-  background: #484B4F;
+  background: #C7C7C7;
 }
 
 
