--- a/website/css/blog.css
+++ b/website/css/blog.css
@@ -35,9 +35,10 @@ header
 	color: black;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
+	width: 270px;
+
 	
-}
-.names
+}.names
 {
 	list-style: none;
 	font-size: 18px;
@@ -53,6 +54,7 @@ header
 	border-color: black;
 	margin-top: 20px;
 }
+
 
 
 
