--- a/website/css/blog.css
+++ b/website/css/blog.css
@@ -46,7 +46,7 @@ header
 .button
 {
 	font-family: Arial, Helvetica, sans-serif;	
-	padding: 5px 15px;
+	padding: 5px 15px 5px 10px;
 	width: 10%;
 	border-radius: 10px;
 	border-style: solid;
