--- a/website/css/blog.css
+++ b/website/css/blog.css
@@ -7,6 +7,20 @@ html
 	background-size: cover;
 	height: 100%
 }
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header'
+    ' main main main right right';
+  grid-gap: 10px;
+  padding: 10px;
+}
+.header { grid-area: header; }
+/*.cato { grid-area: menu; }*/
+.middle { grid-area: main; }
+.cato { grid-area: right; }
+.item5 { grid-area: footer; }
+
 header
 {
 	text-align: center;
@@ -31,7 +45,7 @@ header
 }
 .cato
 {
-	text-align: right;
+	text-align: left;
 	color: black;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
@@ -56,5 +70,16 @@ header
 }
 
 
-
-
+.middle{
+  font-family: 'arial',sans-serif;
+  padding: 15px;
+  text-align: center;
+  background: #FFF;
+  color: black;
+  border-radius:22px;
+  font-size: 12px;;
+  box-shadow: 4px 7px 35px 8px #888888;
+  width: 100%;
+  height: 100%;
+  margin-top: 35%;
+}
