--- a/website/css/index.css
+++ b/website/css/index.css
@@ -104,12 +104,6 @@ h1.page-title{
   width: 20%
 }
 
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-
 .middle{
   font-family: 'arial',sans-serif;
   padding: 15px;
@@ -162,7 +156,7 @@ p{
 }
 
 
-ul {
+#menu ul {
   list-style-type: none;
   position: fixed;
   top: 0;
@@ -171,22 +165,42 @@ ul {
   margin: 0;
   padding: 0;
   top: 100px;
-  left: 37%;
+  left: 38%;
 }
 
-li {
+#menu li {
   float: left;
+  padding: 0 15px;
 }
 
-li a {
+#menu li a {
   display: block;
   color: white;
+  position: relative;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 0;
   text-decoration: none;
 }
 
-li a:hover {
-  background-color: #BDBDBD;
+#menu li a:hover {
+}
 
+#menu li a:after{
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2.3px;
+  display: block;
+  margin-top: 5px;
+  right: 0;
+  background: #fff;
+  transition: width .2s ease;
+  -webkit-transition: width .4s ease;
+}
+ 
+#menu li a:hover:after,
+#menu li a.active:after{
+  width: 100%;
+  left: 0;
+  background: #fff;
 }
