--- a/website/css/blog.css
+++ b/website/css/blog.css
@@ -1,60 +1,47 @@
 html
 {
-	background: linear-gradient(to bottom right, #cc66ff 32%, #00cc99 100%);
+
 	background-size: 100%;
 	background-repeat: no-repeat;
 	font-family: Arial, Helvetica, sans-serif;
 	background-size: cover;
 	height: 100%
 }
+
+
+
+
+h1{
+	font-family: 'Century Gothic',sans-serif;
+	text-align: left;
+	font-size:30px;
+	padding-left: 20px;
+	color: white;
+
+
+}
+
+/*zwate vlakte */
 header
 {
-	text-align: center;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 40px;
-}
 
-.container
-{
-	margin: 0px 200px 0px 200px;
+  background-color: #160202;
+  padding-bottom: 1px;
+  padding-top: 1px;
 
 }
 
 
-
-.blog
-{
-	background-color: white;
-	text-align: center;
-
-}
-.cato
-{
-	margin-left: 80%;
-	text-align: right;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 15px;
-	width: 270px;
-
-	
-}.names
-{
-	list-style: none;
-	font-size: 18px;
-	color: inherit;
-}
 .button
-{
-	font-family: Arial, Helvetica, sans-serif;	
-	padding: 5px 15px 5px 10px;
+{	font-family: Arial, Helvetica, sans-serif;	
 	width: 10%;
 	border-radius: 10px;
-	border-style: solid;
-	border-color: black;
 	margin-top: 20px;
+	color: white;
+	text-decoration: none;
 }
+
+
 
 
 
