--- a/website/css/profile.css
+++ b/website/css/profile.css
@@ -9,7 +9,7 @@ html {
     height: 100%;
 }
 .wrapper_profile{
-  margin: 70px 15%;
+  margin: 70px 25%;
 }
 
 .head_profile  ul {
@@ -20,7 +20,6 @@ html {
   margin: 0;
   padding: 0;
   background-image: linear-gradient(#969696, #A1A1A1);
-
   left: 0.5%;
 }
 
@@ -47,6 +46,7 @@ font-size: 25px;
 background-color: #BDBDBD;
 padding: 10px 20px 10px 20px ;
 border-radius: 5px;
+color: #353333;
 }
 
 .edit_profile_title{
@@ -58,6 +58,7 @@ border: 2px solid #BDBDBD;
 font-style: sans-serif;
 font-size: 25px;
 border-radius:5px 5px 0px 0px;
+color: #353333;
 }
 .edit_profile_body{
 min-height:300px;
@@ -66,9 +67,68 @@ border-width:0px 2px 2px 2px;
 border-radius: 0px 0px 5px 5px ;
 }
 .edit_profile_body_text{
-margin-left: 50px;
+margin-left: 140px;
+min-width: 100px;
 font-style: sans-serif;
-color: black;
+color: #353333;
 font-size: 20px;
 font-weight: bold;
+float: left;
+position: absolute;
+right: 60%;
+
+
+}
+.edit_profile_vakjes{
+float:left;
+display:inline;
+text-align: left;
+margin-top: 22px;
+width: 220px;
+padding: 10px;
+margin: 15px 300px;
+border-radius: 3px;
+background-color: rgba(255, 250, 210, 0.1);
+border: 1.4px solid #BDBDBD;
+}
+.edit_profile_body ul{
+  list-style-type: none;
+  overflow: auto;
+}
+.edit_profile_body li{
+text-align: center;
+}
+.submit{
+border:0;
+height: 40px;
+padding-right:20px;
+padding-left:20px;
+margin-top: 20px;
+margin-left: 45%;
+font-size: 17px;
+background-color: rgb(42, 112, 224);
+border-radius: 5px;
+border: 1px solid ;
+color: white;
+}
+
+
+/*reponseive*/
+@media all and (max-width: 1024px) {
+    .edit_profile_body_text{
+        margin-left: 0px;
+        left: 0;
+    }
+    .edit_profile_body{
+      width: 100%;
+      height: 100%;
+      margin: 0;
+    }
+    .wrapper_profile{
+      margin: 0;
+    }
+    .edit_profile_vakjes{
+      margin-left: 40%;
+      width: 40%;
+    }
 }
