--- a/website/css/profile.css
+++ b/website/css/profile.css
@@ -1,6 +1,6 @@
 html {
   background-size: cover;
-    background-color: white;
+    background-color: #e6e6e6;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
@@ -19,7 +19,7 @@ html {
   overflow: auto;
   margin: 0;
   padding: 0;
-  background-color: rgb(42, 112, 224);
+  background-color: #595959;
   left: 0.5%;
 }
 
@@ -43,26 +43,26 @@ html {
 .welcome_profile{
 font-size: 25px;
 /*background: grey;*/
-background-color: #e2e2e2;
+background-color: #595959;
 padding: 10px 20px 10px 20px ;
 border-radius: 5px;
-color: #353333;
+color: #cccccc;
 }
 
 .edit_profile_title{
   /*background: grey;*/
-background-color: #ededed;
+background-color: #595959;
 padding: 10px 20px 10px 20px ;
 margin-top: 40px;
-border: 2px solid #ededed;
+border: 2px solid #595959;
 font-style: sans-serif;
 font-size: 25px;
 border-radius:5px 5px 0px 0px;
-color: #353333;
+color: white;
 }
 .edit_profile_body{
 min-height:300px;
-border:solid#ededed;
+border:solid#595959;
 border-width:0px 3px 3px 3px;
 border-radius: 0px 0px 5px 5px ;
 }
@@ -89,7 +89,7 @@ padding: 10px;
 margin: 15px 300px;
 border-radius: 3px;
 background-color: rgba(255, 250, 210, 0.1);
-border: 1.4px solid #BDBDBD;
+border: 1.4px solid #595959;
 }
 .edit_profile_body ul{
   list-style-type: none;
