--- a/website/css/profile.css
+++ b/website/css/profile.css
@@ -1,6 +1,6 @@
 html {
   background-size: cover;
-    background-color: #e6e6e6;
+    background-color: #4d4d4d;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
@@ -65,6 +65,7 @@ min-height:300px;
 border:solid#595959;
 border-width:0px 3px 3px 3px;
 border-radius: 0px 0px 5px 5px ;
+background-color: #808080;
 }
 .edit_profile_body_text{
 margin-left: 140px;
