--- a/website/css/profile.css
+++ b/website/css/profile.css
@@ -91,7 +91,14 @@ margin: 15px 300px;
 border-radius: 3px;
 background-color: rgba(255, 250, 210, 0.1);
 border: 1.4px solid #595959;
+color: white;
 }
+
+input::placeholder {
+  color: #f2f2f2;
+
+}
+
 .edit_profile_body ul{
   list-style-type: none;
   overflow: auto;
@@ -109,7 +116,7 @@ margin-left: 45%;
 font-size: 17px;
 background-color: rgb(42, 112, 224);
 border-radius: 5px;
-border: 1px solid ;
+border: 1px solid rgb(42, 112, 224) ;
 color: white;
 }
 
