--- a/website/css/profile.css
+++ b/website/css/profile.css
@@ -11,7 +11,7 @@ html {
 .wrapper_profile{
   margin: 70px 25%;
 }
-
+/*header area*/
 .head_profile  ul {
   list-style-type: none;
   top: 0;
@@ -39,7 +39,8 @@ html {
   background-color: #BDBDBD;
 
 }
-
+/*End header area*/
+/*home page link / profile / admin*/
 .welcome_profile{
 font-size: 25px;
 /*background: grey;*/
@@ -48,7 +49,7 @@ padding: 10px 20px 10px 20px ;
 border-radius: 5px;
 color: #cccccc;
 }
-
+/*Edit profile title*/
 .edit_profile_title{
   /*background: grey;*/
 background-color: #333333;
@@ -60,6 +61,7 @@ font-size: 25px;
 border-radius:5px 5px 0px 0px;
 color: white;
 }
+/*body van de hokjes */
 .edit_profile_body{
 min-height:300px;
 border:solid#595959;
@@ -70,7 +72,7 @@ background-color: #808080;
 .edit_profile_body_text{
 margin-left: 140px;
 min-width: 100px;
-font-style: sans-serif;
+font-style:times;
 color: #353333;
 font-size: 20px;
 font-weight: bold;
@@ -78,7 +80,7 @@ float: left;
 position: absolute;
 right: 60%;
 
-
+/*imput velden*/
 }
 .edit_profile_vakjes{
 float:left;
@@ -95,10 +97,10 @@ color: white;
 }
 
 input::placeholder {
-  color: #f2f2f2;
-
+  color: rgb(230, 230, 230, 0.8);
 }
-
+/*einde imput*/
+/*Naast elkaar zetten imput en text*/
 .edit_profile_body ul{
   list-style-type: none;
   overflow: auto;
@@ -106,6 +108,7 @@ input::placeholder {
 .edit_profile_body li{
 text-align: center;
 }
+/*De knoppen update*/
 .submit{
 border:0;
 height: 40px;
