--- a/website/css/grid.css
+++ b/website/css/grid.css
@@ -6,18 +6,13 @@
 .list{
 	grid-column-start: 3;
 	grid-row-start: 5;
-	color: black;
+
 }
 .box1 { 
   grid-column-start: 1; 
   grid-column-end: 4; 
   grid-row-start: 1; 
   grid-row-end: 3; 
-  background-color:black;
-  color: white;
-  padding: 1em;
-  font-family: Comic Sans MS;
-  font-size:20px;
 }
 
 .ul{
@@ -30,4 +25,210 @@
 }
 .test{
 	margin-top: 20px;
+}
+html {
+  background-size: cover;
+  background-image: linear-gradient(#6E6E6E, white);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+.p1{
+  text-decoration-color: red
+}
+.b1{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  top: 0;
+  display: table;
+
+}
+.b1 .in1{
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  max-width: none;
+
+}
+
+/*Streep onder text weg*/
+a {
+    text-decoration: none !important;
+}
+/*Layout button */
+.logout {
+ background: ;
+  width: 100px;
+  cursor:pointer;
+  border: 1.5px solid white;
+  border-radius:40px;
+  font-weight: bold;
+  padding:2px 1px 2px;
+  color: white;
+  font-family: 'Century Gothic',sans-serif;
+  font-size:14px;
+  text-align:left;
+  text-indent:26px;
+  display:block;
+  margin:0 auto;
+  position:fixed;
+   right:50px;
+   top:30px;
+
+}
+
+.header {
+  background-image: linear-gradient(black, #272827);
+  background-size: cover;
+  padding: 12px;
+  border-radius:0px;
+  position: fixed;
+  width: 100%;
+
+}
+
+body {
+  margin: 0;
+}
+
+h1.site-title{
+  text-align: center;
+  color: white;
+  text-shadow: 2px 2px black;
+  font-size: 47px;
+  letter-spacing: 1px;
+  font-family: 'Century Gothic',sans-serif;
+}
+
+.column{
+  font-family: 'Century Gothic',sans-serif;
+  float: left;
+  width: 40%;
+  background-color: #FFF;
+
+}
+.row:after{
+  content: "";
+  display: table;
+  clear: both;
+}
+.content{
+  max-width: 550px;
+  margin: auto;
+  text-align: center;
+}
+h1.page-title{
+  font-family: 'Century Gothic',sans-serif;
+  color: #000;
+  font-size: 180%;
+  text-shadow: 0 0 300px #000;
+}
+.btn-group{
+  float: left;
+  width: 20%
+}
+
+.middle{
+  font-family: 'arial',sans-serif;
+  padding: 15px;
+  text-align: center;
+  background: #FFF;
+  color: black;
+  border-radius:22px;
+  font-size: 12px;;
+  box-shadow: 4px 7px 35px 8px #888888;
+  width: 100%;
+  height: 100%;
+  margin-top: 35%;
+
+.btn-group button:not(:last-child) {
+  border-bottom: none;
+}
+
+.btn-group button:hover {
+  background-color: #3e8e41;
+}
+}
+.content .btn:hover{
+  color: #282728;
+}
+p{
+    font-size: 120%;
+    line-height: 130%;
+    text-align: left;
+    margin-top: 4%;
+    font-family: sans-serif;
+
+}
+.UserProfileName{
+  position: absolute;
+  position: fixed;
+  top: 0;
+  width: 100%;
+    top: 35px;
+    right: 200px;
+    font-size: 95%;
+    color: white;
+    font-family: 'Century Gothic',sans-serif;
+    margin: 10;
+  padding: 0;
+  width: 9%;
+  border-radius:22px;
+  background-color: #C7C7C7;
+  text-align: center;
+  background: #C7C7C7;
+}
+
+
+#menu ul {
+  list-style-type: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
+  top: 100px;
+  left: 38%;
+}
+
+#menu li {
+  float: left;
+  padding: 0 15px;
+}
+
+#menu li a {
+  display: block;
+  color: white;
+  position: relative;
+  text-align: center;
+  padding: 14px 0;
+  text-decoration: none;
+}
+
+#menu li a:hover {
+}
+
+#menu li a:after{
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2.3px;
+  display: block;
+  margin-top: 5px;
+  right: 0;
+  background: #fff;
+  transition: width .2s ease;
+  -webkit-transition: width .4s ease;
+}
+
+#menu li a:hover:after,
+#menu li a.active:after{
+  width: 100%;
+  left: 0;
+  background: #fff;
 }
