--- a/website/css/grid.css
+++ b/website/css/grid.css
@@ -8,17 +8,17 @@ html{
   grid-gap: 0em;
 }
 
-.test{
+.header-stefan{
   grid-row-start:1;
-  grid-row-end:5;	
+  grid-row-end:3;	
 }
-.tekst{
-  grid-column-start: 2;
-  grid-row-start:2;
-  grid-row-end:5;
+.tinymce{
+	grid-row-start:3;
+	grid-column-start:2;
 }
-
-
+.leeg{
+	grid-row-start:2;
+}
 
 
 
