--- a/website/css/grid.css
+++ b/website/css/grid.css
@@ -18,7 +18,18 @@ html{
   grid-row-end:5;
 }
 
+.test123{
+	padding-top:150px;
+	text-align: center;
+	border-width:10px;
+	border-style:solid;
+	border-radius:10px;
+	brigh
 
+
+
+	
+}
 
 
 
