--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,6 +1,6 @@
 html {
   background-size: cover;
-  background-color: #808080;
+  background-color: ;
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
