--- a/website/css/grid.css
+++ b/website/css/grid.css
@@ -9,7 +9,7 @@ html{
 }
 
 .header-stefan{
- grid-row: 1;	
+	
 }
 .tinymce{
 	padding: 100px;
@@ -24,32 +24,11 @@ html{
 }
 .page{
 	text-align: center;
-	padding: 0% 15%;
 	border-style: solid;
 	border-radius: 5px;
-	border-width: 4px;
-}
-
-.test123{
-	padding-top:150px;
-	text-align: center;
-	border-width:10px;
-	border-style:solid;
-	border-radius:10px;
-
-
-
+	border-width: 3px;
 	
 }
-
-
-
-
-
-
-
-
-
-
-
-
+.cont{
+	padding: 200px 10%;
+}
