--- a/website/css/index.css
+++ b/website/css/index.css
@@ -264,14 +264,16 @@ color: #262626;
 width: 270px;
 padding: 10px;
 margin: 15px 0;
+color:  black; 
 border-radius: 8px;
-background-color: rgba(255, 250, 210, 0.1);
+background-color: transparent;   /*rgba(255, 250, 210, 0.1);*/
+
 border: 1.4px solid black;
 max-width: 80%;
 }
 
  /*acc maken knop (register pagina (s)) */
-.submit{
+.reg-submit{
 border:0;
 height: 30px;
 padding-right:20px;
@@ -296,10 +298,10 @@ border: 1px solid black;
 
 }
 
-.massage{
+.reg-massage{
 margin-top: 20px;
 text-decoration: none;
-
+text-align:   center;
 }
 
 /* knoppen van de login  en wacht woord vergeten(j)*/
