--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,12 +1,22 @@
 html {
   background-size: cover;
-  background-color: ;
+  background-color:   #FFF ;
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+
+/*  html{
+background: linear-gradient(to bottom right, #cc66ff 32%, #00cc99 100%);
+background-size: 100%;
+background-repeat: no-repeat;
+font-family: sans-serif;
+background-size: cover;
+height: 100%
+}*/
+
 }
 .p1{
   text-decoration-color: red
@@ -210,14 +220,14 @@ margin-top: 0;
 
 /* dit is alleen voor login registreen en wachtwoord vergeten pagina's
 /* code van alle pagina's bij elkaar (j)(s)*/
-html{
+/*html{
 background: linear-gradient(to bottom right, #cc66ff 32%, #00cc99 100%);
 background-size: 100%;
 background-repeat: no-repeat;
 font-family: sans-serif;
 background-size: cover;
 height: 100%
-}
+}*/
 
 /* register code grijze vlakte (s)*/
 .registerplek{
@@ -264,7 +274,7 @@ color: #262626;
 width: 270px;
 padding: 10px;
 margin: 15px 0;
-color:  black; 
+`color:  black; 
 border-radius: 8px;
 background-color: transparent;   /*rgba(255, 250, 210, 0.1);*/
 
@@ -361,7 +371,7 @@ text-align:   center;
 
 
 
-html {
+/*html {
   background-size: cover;
     background-color: #4d4d4d;
     background-repeat: no-repeat;
@@ -370,7 +380,7 @@ html {
     padding: 0;
     width: 100%;
     height: 100%;
-}
+}*/
 .wrapper_profile{
   margin: 70px 25%;
 }
@@ -511,3 +521,39 @@ color: white;
     }
 }
 
+
+.wrapper{
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: 0em;
+}
+
+.header-stefan{
+  
+}
+.tinymce{
+  padding: 100px;
+  grid-row:2;
+  grid-column-start:2;
+}
+.leeg{
+  grid-column-start:1; 
+  grid-column-end:3;
+  grid-row-start:2;
+  grid-row-end: 5;
+}
+.page{
+  text-align: center;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 3px;
+  
+}
+.cont{
+  padding: 200px 10%;
+}
+element.style {
+    width: 100%;
+    height: 1000px;
+    display: block;
+}
