--- a/website/css/index.css
+++ b/website/css/index.css
@@ -557,3 +557,40 @@ element.style {
     height: 1000px;
     display: block;
 }
+.grijzevlakte{
+position: absolute;
+top: 45%;
+left: 50%;
+transform: translate(-50%,-50%);
+text-align: center;
+background-color: rgba(255,255,255,0.4);
+border-radius:25px;
+padding:20px 50px;
+}
+.title{
+  font-family: sans-serif;
+  color:  black;
+}
+
+.formulierwachtwoordvergeten{
+  width: 280px;
+  height: 15px;
+  padding: 10px ;
+  margin: 8px 0;
+  border-radius: 8px;
+  background-color: transparent;
+  border: 1px solid black;
+
+}
+.confirmknop{
+
+  width: 110px;
+  margin-top: 30px;
+  margin-bottom: -20px;
+  border-radius: 100px;
+  padding: 5px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid black;
+
+}
