--- a/website/css/index.css
+++ b/website/css/index.css
@@ -382,7 +382,7 @@ text-align:   center;
     height: 100%;
 }*/
 .wrapper_profile{
-  margin: 70px 25%;
+  margin: 120px 25% 70px 25%;
 }
 /*header area*/
 .head_profile  ul {
@@ -443,7 +443,7 @@ border-radius: 0px 0px 5px 5px ;
 background-color: #808080;
 }
 .edit_profile_body_text{
-margin-left: 140px;
+margin-top: 25px;
 min-width: 100px;
 font-style:times;
 color: #353333;
